--- a/index.html
+++ b/index.html
@@ -7,5 +7,20 @@
 
     <body>
         <h1>My Favorite Recipes</h1>
+        <p>This page links to 3 of my favorite recipes.</p>
+        <ul>
+            <li>
+                Tabouli: 
+                <a href="./recipes/tabouli.html" target="_blank">Click here!</a>
+            </li>
+            <li>
+                Hummus: 
+                <a href="./recipes/hummus.html" target="_blank">Click here!</a>
+            </li>
+            <li>
+                Hamburger: 
+                <a href="./recipes/burger.html" target="_blank">Click here!</a>
+            </li>
+        </ul>
     </body>
 </html>
