Added style to website
A "style.css" file was created with CSS to style the website.
Each html page ("index" and all three recipes under "recipes/") links
to this file.

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset ="UTF-8">
         <title>Burger</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
         <h1>Burger Recipe</h1>
         <img src="../images/burger.jpg" 
-        alt="Picture of a hamburger" width="600" height="600">
+        alt="Picture of a hamburger" width="300" height=auto>
         
         <h2>Description</h2>
         <p>There is not much to say about the hamburger. Its
