--- a/recipes/tabouli.html
+++ b/recipes/tabouli.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset ="UTF-8">
         <title>Tabouli</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
         <h1>Tabouli Recipe</h1>
         
         <img src="../images/tabouli.jpg" 
-        alt="Picture of a tabouli dish" width="600" height="600">
+        alt="Picture of a tabouli dish" width="300" height=auto>
         
         <h2>Description</h2>
         <p>Tabouli is a wholesome dish very popular in 
