Improved website style
The style of the website was improved. A footer was added to
the main page "index.html". Every page (main page and all recipe
pages) has been updated with some divs and classes that are defined
in "style.css".

--- a/index.html
+++ b/index.html
@@ -8,20 +8,35 @@
 
     <body>
         <h1>My Favorite Recipes</h1>
-        <p>This page links to 3 of my favorite recipes.</p>
-        <ul>
-            <li>
-                Tabouli: 
-                <a href="./recipes/tabouli.html" target="_blank">Click here!</a>
-            </li>
-            <li>
-                Hummus: 
-                <a href="./recipes/hummus.html" target="_blank">Click here!</a>
-            </li>
-            <li>
-                Hamburger: 
-                <a href="./recipes/burger.html" target="_blank">Click here!</a>
-            </li>
-        </ul>
+        <div class="main-ctnr">
+            <p class="first-p">This page links to 3 of my favorite recipes:</p>
+            <ul>
+                <li>
+                    Tabouli: 
+                    <a href="./recipes/tabouli.html" target="_blank">Click here!</a>
+                </li>
+                <li>
+                    Hummus: 
+                    <a href="./recipes/hummus.html" target="_blank">Click here!</a>
+                </li>
+                <li>
+                    Hamburger: 
+                    <a href="./recipes/burger.html" target="_blank">Click here!</a>
+                </li>
+            </ul>
+            <p>Should you have some time on your hands as well as curiosity to
+                try them out, I strongly recommend them! I think they will
+                surprise you and make you addicted!
+            </p>
+            <p class="last-p">I hope you enjoy them as much as I do!</p>
+        </div>
+        <div class="footer">
+            <p>
+                <span class="footer-l">Simon D. 2023</span>
+                <span class="footer-r">
+                    <a href="https://github.com/SimonTPD" target="_blank">Github</a>
+                </span>
+            </p>
+        </div>    
     </body>
 </html>
