--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -8,76 +8,84 @@
 
     <body>
         <h1>Hummus Recipe</h1>
-        <img src="../images/hummus.jpg" 
-        alt="Picture of a hummus dish" width="300" height=auto>
+        <div class="main-ctnr">
+            <img src="../images/hummus.jpg" 
+            alt="Picture of a hummus dish" width="300" height=auto>
+        </div>
         
         <h2>Description</h2>
-        <p>Hummus is another amazing Mediteranean dish. A mashup
-            whose principal ingredient is chick peas, it's
-            not just nutritious, but also delicious with pita.</p>
-        
+        <div class="main-ctnr">
+            <p class="first-p last-p">Hummus is another amazing Mediteranean dish. A mashup
+                whose principal ingredient is chick peas, it's
+                not just nutritious, but also delicious with pita.</p>
+        </div>
+
         <h2>Ingredients</h2>
-        <ul>
-            <li>Chickpeas (or garbanzo beans) are the base for 
-                hummus. The softened beans break down into a 
-                smooth paste. You can use canned or home-cooked 
-                chickpeas in our recipe. I use them 
-                interchangeably, giving home-cooked chickpeas 
-                a slight edge regarding flavor. Here's my method 
-                for cooking dried chickpeas.</li>
-            <li>Tahini is a paste made from ground sesame seeds, 
-                making hummus taste incredible. You can buy 
-                tahini, or you can make it yourself. To make 
-                hummus that's 100% from scratch, we use homemade 
-                tahini (it's easy, I promise). Here's our tahini 
-                recipe with a video showing how to make it.</li>
-            <li>Fresh lemon juice is essential for great hummus, 
-                so skip the bottled juice and buy fresh lemons — 
-                1 large or 2 medium lemons should do.</li> 
-            <li>Fresh garlic adds a little spice and zest. 
-                I add one small clove and find it's just right. 
-                Add more for a garlicky kick, or substitute 
-                for more mellow roasted garlic and make roasted 
-                garlic hummus. Here's how we roast garlic.</li>   
-            <li>Ground cumin and salt help to make it taste 
-                amazing, and the ground cumin adds a little 
-                more spice and richness.</li>   
-            <li>Olive oil makes the texture of the hummus 
-                luxurious. We also drizzle over the top of the 
-                swirly hummus when serving. I like fruity, 
-                light-flavored olive oils when making hummus.</li>     
-        </ul>
+        <div class="main-ctnr">
+            <ul class="first-p last-p">
+                <li>Chickpeas (or garbanzo beans) are the base for 
+                    hummus. The softened beans break down into a 
+                    smooth paste. You can use canned or home-cooked 
+                    chickpeas in our recipe. I use them 
+                    interchangeably, giving home-cooked chickpeas 
+                    a slight edge regarding flavor. Here's my method 
+                    for cooking dried chickpeas.</li>
+                <li>Tahini is a paste made from ground sesame seeds, 
+                    making hummus taste incredible. You can buy 
+                    tahini, or you can make it yourself. To make 
+                    hummus that's 100% from scratch, we use homemade 
+                    tahini (it's easy, I promise). Here's our tahini 
+                    recipe with a video showing how to make it.</li>
+                <li>Fresh lemon juice is essential for great hummus, 
+                    so skip the bottled juice and buy fresh lemons — 
+                    1 large or 2 medium lemons should do.</li> 
+                <li>Fresh garlic adds a little spice and zest. 
+                    I add one small clove and find it's just right. 
+                    Add more for a garlicky kick, or substitute 
+                    for more mellow roasted garlic and make roasted 
+                    garlic hummus. Here's how we roast garlic.</li>   
+                <li>Ground cumin and salt help to make it taste 
+                    amazing, and the ground cumin adds a little 
+                    more spice and richness.</li>   
+                <li>Olive oil makes the texture of the hummus 
+                    luxurious. We also drizzle over the top of the 
+                    swirly hummus when serving. I like fruity, 
+                    light-flavored olive oils when making hummus.</li>     
+            </ul>
+        </div>
 
         <h2>Steps</h2>
-        <ol>
-            <li>In the bowl of a food processor, combine the 
-                tahini and lemon juice and process for 1 minute. 
-                Scrape the sides and bottom of the bowl, then 
-                process for 30 seconds more. This extra time 
-                helps “whip” or “cream” the tahini, making the 
-                hummus smooth and creamy.</li>
-            <li>Add the olive oil, minced garlic, cumin, and a 
-                1/2 teaspoon of salt to the whipped tahini and 
-                lemon juice. Process for 30 seconds, scrape the 
-                sides and bottom of the bowl, and then process 
-                for another 30 seconds or until well blended.</li>
-            <li>Add half of the chickpeas to the food processor 
-                and process for 1 minute. Scrape the sides and 
-                bottom of the bowl, then add the remaining 
-                chickpeas and process them until thick and 
-                relatively smooth, 1 to 2 minutes.</li>
-            <li>The hummus will likely be too thick and still 
-                have tiny bits of chickpea. To fix this, slowly 
-                add 2 to 3 tablespoons of cold water or 
-                aquafaba with the food processor turned on until 
-                you reach the perfect consistency.</li>
-            <li>Taste and adjust as needed. Serve hummus with a 
-                drizzle of olive oil and a sprinkle of paprika, 
-                sumac, or Za'atar.</li>
-            <li>Store homemade hummus in an airtight container 
-                and refrigerate for up to one week. Freeze, 
-                covered with a thin layer of olive oil, for 
-                up to one month.</li>
-        </ol>        
+        <div class="main-ctnr">
+            <ol class="first-p last-p">
+                <li>In the bowl of a food processor, combine the 
+                    tahini and lemon juice and process for 1 minute. 
+                    Scrape the sides and bottom of the bowl, then 
+                    process for 30 seconds more. This extra time 
+                    helps “whip” or “cream” the tahini, making the 
+                    hummus smooth and creamy.</li>
+                <li>Add the olive oil, minced garlic, cumin, and a 
+                    1/2 teaspoon of salt to the whipped tahini and 
+                    lemon juice. Process for 30 seconds, scrape the 
+                    sides and bottom of the bowl, and then process 
+                    for another 30 seconds or until well blended.</li>
+                <li>Add half of the chickpeas to the food processor 
+                    and process for 1 minute. Scrape the sides and 
+                    bottom of the bowl, then add the remaining 
+                    chickpeas and process them until thick and 
+                    relatively smooth, 1 to 2 minutes.</li>
+                <li>The hummus will likely be too thick and still 
+                    have tiny bits of chickpea. To fix this, slowly 
+                    add 2 to 3 tablespoons of cold water or 
+                    aquafaba with the food processor turned on until 
+                    you reach the perfect consistency.</li>
+                <li>Taste and adjust as needed. Serve hummus with a 
+                    drizzle of olive oil and a sprinkle of paprika, 
+                    sumac, or Za'atar.</li>
+                <li>Store homemade hummus in an airtight container 
+                    and refrigerate for up to one week. Freeze, 
+                    covered with a thin layer of olive oil, for 
+                    up to one month.</li>
+            </ol>
+        </div>            
     </body>
 </html>
