--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -8,39 +8,47 @@
 
     <body>
         <h1>Burger Recipe</h1>
-        <img src="../images/burger.jpg" 
-        alt="Picture of a hamburger" width="300" height=auto>
+        <div class="main-ctnr">
+            <img src="../images/burger.jpg" 
+            alt="Picture of a hamburger" width="300" height=auto>
+        </div>
         
         <h2>Description</h2>
-        <p>There is not much to say about the hamburger. Its
-            reputation precedes it. It's an American staple
-            and the picture can already bring the taste
-            to your mouth.</p>
+        <div class="main-ctnr">
+            <p class="first-p last-p">There is not much to say about the hamburger. Its
+                reputation precedes it. It's an American staple
+                and the picture can already bring the taste
+                to your mouth.</p>
+        </div>
 
         <h2>Ingredients</h2>
-        <ul> 
-            <li>1 large egg</li>
-            <li>½ teaspoon salt</li>            
-            <li>½ teaspoon ground black pepper</li>           
-            <li>1 pound ground beef</li>           
-            <li>½ cup fine dry bread crumbs</li>       
-        </ul>
+        <div class="main-ctnr">
+            <ul class="first-p last-p"> 
+                <li>1 large egg</li>
+                <li>½ teaspoon salt</li>            
+                <li>½ teaspoon ground black pepper</li>           
+                <li>1 pound ground beef</li>           
+                <li>½ cup fine dry bread crumbs</li>       
+            </ul>
+        </div>
 
         <h2>Steps</h2>
-        <ol>
-            <li>Preheat an outdoor grill for high heat and 
-                lightly oil grate.</li>
-            <li>Whisk together egg, salt, and pepper in a 
-                medium bowl.</li>
-            <li>Add ground beef and bread crumbs and mix with 
-                your hands or a fork until well blended.</li>
-            <li>Form into four 3/4-inch-thick patties.</li>
-            <li>Place patties on the preheated grill. 
-                Cover and cook 6 to 8 minutes per side, or 
-                to desired doneness. An instant-read thermometer 
-                inserted into the center should read at least 
-                160 degrees F (70 degrees C).</li>
-            <li>Serve hot and enjoy!</li>
-        </ol>         
+        <div class="main-ctnr">
+            <ol class="first-p last-p">
+                <li>Preheat an outdoor grill for high heat and 
+                    lightly oil grate.</li>
+                <li>Whisk together egg, salt, and pepper in a 
+                    medium bowl.</li>
+                <li>Add ground beef and bread crumbs and mix with 
+                    your hands or a fork until well blended.</li>
+                <li>Form into four 3/4-inch-thick patties.</li>
+                <li>Place patties on the preheated grill. 
+                    Cover and cook 6 to 8 minutes per side, or 
+                    to desired doneness. An instant-read thermometer 
+                    inserted into the center should read at least 
+                    160 degrees F (70 degrees C).</li>
+                <li>Serve hot and enjoy!</li>
+            </ol>
+        </div>         
     </body>
 </html>
